--- a/index.html
+++ b/index.html
@@ -9,8 +9,19 @@
 </head>
 <body>
     
-    <h2> portfolio design </h2>
+    <section class="onsection">
 
+        <div class="onsection-items">
+            <h1>Welcome <span class="heder-color">ToPeter Parker</span> World </h1>
+            <h2>Build Climber and Train Stopper</h2>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+            <a class="hire-me" href="">hire me</a>
+        </div>
+        <div class="onsection-items">
+            <img src="images/jhankar.png" alt="">
+        </div>
+
+    </section>
 
 </body>
 </html>
